5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1758_1580.log
== TEST (2019-05-28 11:19:02) 
-- CODE:
from numpy import *
notas = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
media = 0
while(i<size(notas)):
	if(notas[i]=-1):
		faltas = faltas + 1
	i = i + 1
	elif(notas[i]>=6):
		aprovados = aprovados + 1
	i = i + 1
	elif(notas[i]>0 and notas[i]<6):
		reprovados = reprovados + 1
	i = i + 1
a = sum(notas)/size(notas)
print(faltas)
-- ERROR:
File "XXXX", line 10
    if(notas[i]=-1):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:29:27) 
-- CODE:
from numpy import *
notas = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
while(i<size(notas)):
	if(notas[i]=-1):
		faltas = faltas + 1
	elif(notas[i]>=6):
		aprovados = aprovados + 1
	elif(notas[i]>0 and notas[i]<6):
		reprovados = reprovados + 1
	if(notas[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		i = maior
	i = i + 1
a = sum(notas)/size(notas)
print(faltas)
print(aprovados)
print(reprovados)
print(soma)
print(a)
-- ERROR:
File "XXXX", line 11
    if(notas[i]=-1):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:29:44) 
-- CODE:
from numpy import *
notas = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas = faltas + 1
	elif(notas[i]>=6):
		aprovados = aprovados + 1
	elif(notas[i]>0 and notas[i]<6):
		reprovados = reprovados + 1
	if(notas[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		i = maior
	i = i + 1
a = sum(notas)/size(notas)
print(faltas)
print(aprovados)
print(reprovados)
print(soma)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:30:35) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas = faltas + 1
	elif(notas[i]>=6):
		aprovados = aprovados + 1
	elif(notas[i]>0 and notas[i]<6):
		reprovados = reprovados + 1
	if(notas[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		i = maior
	i = i + 1
a = sum(notas)/size(notas)
print(faltas)
print(aprovados)
print(reprovados)
print(soma)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:31:17) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
while(i<size(nota)):
	if(notas[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		i = maior
	i = i + 1
a = sum(nota)/size(nota)
print(faltas)
print(aprovados)
print(reprovados)
print(soma)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:32:07) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		i = maior
	i = i + 1
a = sum(nota)/size(nota)
print(faltas)
print(aprovados)
print(reprovados)
print(soma)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:35:04) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		i = maior
	i = i + 1
a = sum(nota)/size(nota)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:37:21) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		i = maior
	i = i + 1
a = sum(nota)/size(nota)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:38:00) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		i = maior
	i = i + 1
a = sum(nota)/size(nota)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:39:57) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(aprovados + reprovados)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:40:57) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(aprovados + reprovados)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:40:59) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(aprovados + reprovados)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
0.48304
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
7.03
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:41:29) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(aprovados + reprovados)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:42:37) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(aprovados + reprovados)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:44:00) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(aprovados + reprovados)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:44:41) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(aprovados + reprovados)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:47:29) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:48:01) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:48:03) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
0.318166
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:52:11) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]!= 0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:52:13) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]!= 0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
0.342083
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:52:20) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]!= 0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
0.476894
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
3
4
5
5.0
A
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:52:21) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]!= 0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
2.2966
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:52:21) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]!= 0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
3.63484
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:

-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:52:21) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]!= 0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
2.72335
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:52:21) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]!= 0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
0.797487
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
3
4
5
5.0
A
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
6
0
5
3.4
JULIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:52:21) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]!= 0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
3.32601
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:52:21) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]!=  and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
0.789353
-- ERROR:
  File "/home/codebench/codes/1758/1580/main.py", line 16
    elif(nota[i]!=  and nota[i]<6):
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:52:25) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]!= -1 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
0.439962
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:53:48) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>=0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
0.524769
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:53:50) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>=0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:53:50) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>=0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
0.464379
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:53:56) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
0.4166
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:54:03) 
-- CODE:
from numpy import *
nota = array(eval(input("digite as notas: ")))
alunos = array(eval(input("digite os nomes dos alunos ")))
i = 0
faltas = 0
aprovados = 0
reprovados = 0
soma = 0
media = 0
maior = 0
while(i<size(nota)):
	if(nota[i]==-1):
		faltas = faltas + 1
	elif(nota[i]>=6):
		aprovados = aprovados + 1
	elif(nota[i]>=0 and nota[i]<6):
		reprovados = reprovados + 1
	if(nota[i] != -1):
		soma = soma + nota[i]
	if(nota[i] == max(nota)):
		maior = i
	i = i + 1
a = soma/(size(alunos)-faltas)
print(faltas)
print(aprovados)
print(reprovados)
print(round(a,2))
print(alunos[maior])
-- EXECUTION TIME:
0.379224
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
